# zero-limit

./: .gitignore  LICENSE  README.md  index.html  package.json
.github/workflows/: build-release.yml
docs/: USAGE.md
docs/plans/: 2026-01-19-github-workflow-design.md
scripts/: bump-version.sh
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs  state.rs  tray.rs
src-tauri/src/commands/: cli_proxy.rs  copilot.rs  download.rs  mod.rs  utils.rs  version.rs
src/components/quota/: CompactQuotaCard.tsx  ProviderFilter.tsx  ProviderQuotaCard.tsx
src/constants/: api.ts  app.ts  index.ts  providers.ts  routes.ts  storage.ts
src/features/about/: AboutPage.tsx  update.store.ts
src/features/auth/: LoginPage.tsx  auth.store.ts
src/features/dashboard/: DashboardPage.tsx  usage.store.ts  useDashboardPresenter.ts
src/features/logs/: LogsPage.tsx  useLogsPresenter.ts
src/features/onboarding/: OnboardingFlow.tsx
src/hooks/: index.ts  useAppVersion.ts  useInterval.ts
src/i18n/: index.ts
src/layouts/: DefaultLayout.tsx  default.tsx
src/pages/: AboutPage.tsx  DashboardPage.tsx  LoginPage.tsx  ProvidersPage.tsx  QuotaPage.tsx  SettingsPage.tsx  index.ts
src/router/: MainRoutes.tsx  ProtectedRoute.tsx  index.ts
src/stores/: index.ts  useCliProxyStore.ts  useConfigStore.ts  useLanguageStore.ts  useThemeStore.ts  useUpdateStore.ts
src/types/: api.ts  auth.ts  authFile.ts  index.ts  quota.ts  usage.ts
src/utils/: constants.ts  index.ts  language.ts  privacy.ts  quota.ts
(+58 files in other folders)
