[package]
name = "zero-limit"
version = "1.1.3"
description = "ZeroLimit AI Coding Assistant Quota Tracker"
authors = ["0xtbug"]
edition = "2021"

[lib]
name = "zero_limit_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "multipart"] }
tokio = { version = "1", features = ["full"] }
thiserror = "1"
opener = "0.7"
zip = "8.1.0"
tar = "0.4.44"
flate2 = "1.1.9"
dirs = "6.0.0"
tauri-plugin-os = "2.3.2"
